--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,8 +1,9 @@
-<div class="col-md-4 col-md-offset-4">
-    <h2>新增讨论版</h2>
+<h1> Add a job </h1>
 
-    <hr>
+<%= simple_form_for @job do |f| %>
 
-    <%= render "form" %>
+<%= f.input :title %>
+<%= f.input :description %>
 
-</div>
+  <%= f.submit "Submit" %>
+<% end %>
